testsuite/tests/parser/should_fail/StringInterpolationNoExprClose.hs
{-# LANGUAGE StringInterpolation #-}

test :: String
test = let x = "world" in s"hello ${x"
