testsuite/tests/parser/should_fail/StringInterpolationNoExprClose.stderr
StringInterpolationNoExprClose.hs:4:38: error: [GHC-21231]
    lexical error at character '\n'

